# interactive_computer_graphics

./: .gitignore  readMe.md
1/: CMakeLists.txt  README.md
1/projectWebPage/: CS 5610_6610 - Spring 2024 - Interactive Computer Graphics.html
1/src/: main.cpp
2/: CMakeLists.txt  README.md
2/glsl/: fs.frag  vs.vert
2/include/: camera.hpp
2/src/: main.cpp
2/src/implementations/: mesh.cpp
3/: CMakeLists.txt  README.md
3/glsl/: fs.frag
3/include/: shaderProgram.hpp
3/src/: main.cpp
3/src/implementations/: camera.cpp  mesh.cpp  shaderProgram.cpp
4/: CMakeLists.txt  README.md
4/glsl/: planeFS.frag  planeVS.vert  teapotFS.frag
4/include/: framebuffer.hpp  mesh.hpp
4/src/: main.cpp
4/src/implementations/: framebuffer.cpp  mesh.cpp
5/: CMakeLists.txt  README.md
5/glsl/: environmentMap.frag  environmentMap.vert  planeFS.frag  planeVS.vert  teapotFS.frag  teapotVS.vert
5/include/: framebuffer.hpp  mesh.hpp  shaderProgram.hpp
5/src/: main.cpp
5/src/implementations/: mesh.cpp  shaderProgram.cpp
6/: README.md
6/glsl/: teapotFS.frag  teapotVS.vert
6/include/: framebuffer.hpp  mesh.hpp
6/src/: main.cpp
6/src/implementations/: framebuffer.cpp  mesh.cpp
7/: CMakeLists.txt  README.md
7/glsl/: cameraShader.frag  cameraShader.vert  quadDisplacer.frag  quadDisplacer.tesc  quadDisplacer.tese  quadDisplacer.vert  quadShadow.frag  quadShadow.tesc  quadShadow.tese  quadShadow.vert  quadTriangulator.frag  quadTriangulator.geom  quadTriangulator.tesc  quadTriangulator.tese  quadTriangulator.vert  shadow.vert  teapotFS.frag
7/include/: camera.hpp  mesh.hpp  shaderProgram.hpp
7/src/: main.cpp
7/src/implementations/: camera.cpp  mesh.cpp  shaderProgram.cpp
utils/glad/: glad.c
utils/glad/glad/: glad.h
utils/transformations/: transformations.cpp  transformations.hpp
